adding few programs